# face_tracking

./: CMakeLists.txt  FIX_CV2_DATA.md  FIX_LINE_ENDINGS.md  FIX_SOURCE.md  FIX_WITHOUT_DOS2UNIX.md  INSTALL_RCLPY.md  INSTALL_STEPS.md  INSTALL_UBUNTU.md  INSTALL_UBUNTU_FIX.md  QUICK_INSTALL.md  README.md  REBUILD_INSTRUCTIONS.md  install.sh  package.xml  requirements_face_tracking.txt
launch/: face_tracking.launch.py
scripts/: face_tracking_node.py
